Adding Unavailable Time (#23)
