# cmd/api/app.go
@@ -11,19 +11,20 @@ import (
 )
 
 type services struct {
-	emailService       port.EmailService
-	userService        port.UserService
-	authService        port.AuthService
-	appointmentService port.AppoitmentService
+	emailService           port.EmailService
+	userService            port.UserService
+	authService            port.AuthService
+	appointmentService     port.AppoitmentService
+	unavailableTimeService port.UnavailableTimeService
 }
 
-type application struct {
+type Application struct {
 	config    *config.Config
 	services  services
 	scheduler gocron.Scheduler
 }
 
-func NewApplication(config *config.Config, dbconn *mongodb.MongoDBConnection) *application {
+func NewApplication(config *config.Config, dbconn *mongodb.MongoDBConnection) *Application {
 	// email service with mailgun
 	emailService := mailgun.NewEmailService(&config.Notification)
 	// user
@@ -34,6 +35,9 @@ func NewApplication(config *config.Config, dbconn *mongodb.MongoDBConnection) *a
 	// appointment
 	appointmentRepo := mongodb.NewAppointmentRepository("appointments", dbconn)
 	appointmentService := service.NewAppointmentService(appointmentRepo, userService, emailService)
+	// unavailable time
+	unavailableTimeRepo := mongodb.NewUnavailableTimeRepository("unavailable_time", dbconn)
+	unavailableTimeService := service.NewUnavailableTimeService(unavailableTimeRepo, userService)
 
 	// scheduler
 	scheduler, err := gocron.NewScheduler()
@@ -41,13 +45,14 @@ func NewApplication(config *config.Config, dbconn *mongodb.MongoDBConnection) *a
 		panic(err)
 	}
 
-	app := &application{
+	app := &Application{
 		config: config,
 		services: services{
-			emailService:       emailService,
-			userService:        userService,
-			authService:        authService,
-			appointmentService: appointmentService,
+			emailService:           emailService,
+			userService:            userService,
+			authService:            authService,
+			appointmentService:     appointmentService,
+			unavailableTimeService: unavailableTimeService,
 		},
 		scheduler: scheduler,
 	}
